+ adding project files / structure

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # Package Files #
 *.jar
+# Special Exception
+!vendor/mysql-connector-java-8.0.21.jar 
 *.war
 *.nar
 *.ear
@@ -21,3 +23,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.vscode/
